@@ -1,5 +1,7 @@
 Version 1.1.9 - ?? ????? ????
 
+  * An option to ignore malformed headers on a multi-part GetObject was
+    added.
   * Fix bug where exception was thrown when URL was of the form:
     http://example.com:6103
   * Added missing METADATA-OBJECT to RetsSession::MetadataTypeToString
